Ajout de l'activité map
-Ajout de l’activité représentant la carte
-Chargement des données au lancement de l’application
-Affichage des POI sur la carte
-Notification lorsque l’utilisateur arrive dans une zone importent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">TestDataXML</string>
+    <string name="app_name">Projet VISION</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_poidetails">POIDetails</string>
 </resources>
