Ajout de l'activité Information
Ajout d'une activité pour afficher les informations d'un lieu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_configuration5">Configuration5</string>
     <string name="title_activity_configuration6">Configuration6</string>
     <string name="title_activity_activite_test">Activite_test</string>
+    <string name="title_activity_information">InformationActivity</string>
 </resources>
